--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "wjstnwhd04@naver.com"
+      # url: "wjstnwhd04@naver.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
