--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "전수종"
-  avatar           : "C:/Users/user/Desktop/download"
+  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "용인외대부고 2학년 5반 25번"
   location         : "대한민국"
   email            : "wjstnwhd04@naver.com"
