--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://sjjeon04.github.io/"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "SJJeon04/SJJeon04.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/cat.png"
+logo                     : "/assets/images/panther.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
